--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "build": "vite build"
   },
   "dependencies": {
-    "html2canvas": "^1.3.3",
     "gsap": "^3.10.4",
+    "html2canvas": "^1.3.3",
     "jspreadsheet-ce": "^4.9.7",
+    "jszip": "^3.10.1",
     "scroll-anchor": "^1.0.3",
     "swiper": "5.x",
     "three": "0.134.0",
     "wordcloud": "^1.2.2"
-  },
-  "devDependencies": {
   }
 }
