--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "build": "vite build"
   },
   "dependencies": {
+    "element-plus": "^2.2.28",
     "gsap": "^3.10.4",
     "html2canvas": "^1.3.3",
     "jspreadsheet-ce": "^4.9.7",
     "jszip": "^3.10.1",
+    "pinia": "^2.0.29",
     "scroll-anchor": "^1.0.3",
     "swiper": "5.x",
     "three": "0.134.0",
+    "vue": "3.2.25",
+    "vue-router": "^4.1.6",
     "wordcloud": "^1.2.2"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "sass": "^1.58.0",
+    "vite": "^4.0.4"
   }
 }
